[package]
name = "zwuevi"
version = "0.1.0"
edition = "2021"


[dependencies]
sha3 = "^0.10"
rand = "^0.7"
base32 = "0.4.0"
base64 = "0.13.0"
ed25519-dalek = "1.0.1"
tokio = { version = "^1", features = ["rt-multi-thread", "io-util", "macros", "sync", "time", "net"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

