[package]
name = "zwuevi"
version = "0.1.1"
edition = "2021"
description = "Library to communicate with the Tor control socket to generate ephemeral onion services"
readme = "README.md"
repository = "https://github.com/mobilesec/zwuevi"
license = "EUPL-1.2"
keywords = ["privacy", "network", "tor", "onion"]
categories = ["network-programming", "asynchronous", "cryptography"]

[[example]]
name = "echo-onion"
path = "examples/echo-onion/src/main.rs"

[[example]]
name = "debug-logs"
path = "examples/debug-logs/src/main.rs"

[dependencies]
sha3 = "~0.10"
rand = "~0.8"
base32 = "~0.5"
base64 = "~0.22"
ed25519-dalek = { version = "~2", features = ["hazmat", "rand_core"] }
tokio = { version = "^1", features = ["rt-multi-thread", "io-util", "macros", "sync", "time", "net"] }
log = "~0.4"
